# zed

./: Cargo.toml
crates/lsp/src/: lsp.rs
crates/lsp_workspace_command/: Cargo.toml
crates/lsp_workspace_command/src/: lsp_workspace_command.rs
crates/lsp_workspace_command_selector/: Cargo.toml
crates/lsp_workspace_command_selector/src/: lsp_workspace_command_selector.rs
crates/project/src/: lsp_store.rs  project.rs
crates/workspace/src/: workspace.rs
crates/zed/: Cargo.toml
crates/zed/src/: main.rs
