[package]
name = "lsp_workspace_command"
version = "0.1.0"
publish.workspace = true
edition.workspace = true

[lints]
workspace = true

[lib]
path = "src/lsp_workspace_command"
doctest = false

[dependencies]
anyhow.workspace = true
editor.workspace = true
file_finder.workspace = true
file_icons.workspace = true
fuzzy.workspace = true
gpui.workspace = true
language.workspace = true
log.workspace = true
lsp.workspace = true
picker.workspace = true
project.workspace = true
settings.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
workspace-hack.workspace = true

[dev-dependencies]
editor = { workspace = true, features = ["test-support"] }
